--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
           </ul>
         </nav>
       </header>
+      <main>
+        <div class="background-img"></div>
+      </main>
   </body>
 </html>
