add explore more button

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </header>
       <main>
         <div class="background-img"></div>
+        <a class="explore-button" href="biography.html">Explore More</a>
       </main>
   </body>
 </html>
