--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </header>
       <main>
         <div class="background-img"></div>
-        <a class="explore-button" href="biography.html">Explore More</a>
+        <a class="explore-more" href="biography.html">Explore More</a>
       </main>
   </body>
 </html>
