add quotes to index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,34 @@
       <div class="heading-container">
         <h1 id="heading">NICCOLO MACHIAVELLI</h1>
       </div>
+      <div class="quote-container">
+        <div class="quote-group">
+          <div class="quote" id="quote1">
+            <p>
+              "I'm not interested in preserving the status quo;<br />
+              I want to overthrow it"
+            </p>
+          </div>
+          <div class="quote" id="quote2">
+            <p>
+              "Where the willingness is great,<br />
+              the difficulties cannot be great."
+            </p>
+          </div>
+        </div>
+        <div class="quote-group">
+          <div class="quote" id="quote3">
+            <p>
+              "The first method for <br />
+              estimating the intelligence of a <br />ruler is to look at the men
+              he has around him."
+            </p>
+          </div>
+          <div class="quote" id="quote4">
+            <p>"Never was anything great achieved <br />without danger."</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
