style quotes, change header position to fixed  and adjust padding on heading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       type="image/svg+xml"
     />
   </head>
+
   <body>
+      <!-- header -->
     <header>
       <a href="index.html">
         <svg
@@ -35,6 +37,7 @@
           ></path>
         </svg>
       </a>
+      <!-- Nav -->
       <input id="menu-toggle" type="checkbox" />
       <label for="menu-toggle" id="menu-icon">☰</label>
       <nav id="nav-menu">
@@ -47,12 +50,14 @@
         </ul>
       </nav>
     </header>
+    <!-- Main -->
     <main>
       <div class="background-img"></div>
       <a class="explore-more" href="biography.html">Explore More</a>
       <div class="heading-container">
         <h1 id="heading">NICCOLO MACHIAVELLI</h1>
       </div>
+      <!-- Quotes -->
       <div class="quote-container">
         <div class="quote-group">
           <div class="quote" id="quote1">
