add and style new video section on index.html and also update explore more button to point to the video section when clicked

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-      <!-- header -->
+    <!-- header -->
     <header>
       <a href="index.html">
         <svg
@@ -52,40 +52,55 @@
     </header>
     <!-- Main -->
     <main>
-      <div class="background-img"></div>
-      <a class="explore-more" href="biography.html">Explore More</a>
-      <div class="heading-container">
-        <h1 id="heading">NICCOLO MACHIAVELLI</h1>
-      </div>
-      <!-- Quotes -->
-      <div class="quote-container">
-        <div class="quote-group">
-          <div class="quote" id="quote1">
-            <p>
-              "I'm not interested in preserving the status quo;<br />
-              I want to overthrow it"
-            </p>
+      <section>
+        <div class="background-img"></div>
+        <a class="explore-more" href="index.html#video-section">Explore More</a>
+        <div class="heading-container">
+          <h1 id="heading">NICCOLO MACHIAVELLI</h1>
+        </div>
+        <!-- Quotes -->
+        <div class="quote-container">
+          <div class="quote-group">
+            <div class="quote" id="quote1">
+              <p>
+                "I'm not interested in preserving the status quo;<br />
+                I want to overthrow it"
+              </p>
+            </div>
+            <div class="quote" id="quote2">
+              <p>
+                "Where the willingness is great,<br />
+                the difficulties cannot be great."
+              </p>
+            </div>
           </div>
-          <div class="quote" id="quote2">
-            <p>
-              "Where the willingness is great,<br />
-              the difficulties cannot be great."
-            </p>
+          <div class="quote-group">
+            <div class="quote" id="quote3">
+              <p>
+                "The first method for <br />
+                estimating the intelligence of a <br />ruler is to look at the
+                men he has around him."
+              </p>
+            </div>
+            <div class="quote" id="quote4">
+              <p>"Never was anything great achieved <br />without danger."</p>
+            </div>
           </div>
         </div>
-        <div class="quote-group">
-          <div class="quote" id="quote3">
-            <p>
-              "The first method for <br />
-              estimating the intelligence of a <br />ruler is to look at the men
-              he has around him."
-            </p>
-          </div>
-          <div class="quote" id="quote4">
-            <p>"Never was anything great achieved <br />without danger."</p>
-          </div>
+      </section>
+      <section id="video-section">
+        <div class="video-container">
+          <iframe
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen=""
+            frameborder="0"
+            height="715"
+            src="https://www.youtube.com/embed/IdRxHTih-28"
+            title="The Prince by Niccolò Machiavelli (Complete Audiobook, Unabridged)"
+            width="1271"
+          ></iframe>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
