--- a/index.html
+++ b/index.html
@@ -101,6 +101,60 @@
           ></iframe>
         </div>
       </section>
+      <!-- Literary Works -->
+      <section class="literary-works">
+        <h1 class="literary-title">Literary Works</h1>
+        <div class="works-container">
+        <div class="work">
+        <a href="https://www.kobo.com/ie/en/ebook/the-prince-13" target="_blank">
+        <img alt="The Prince" src="assets\images_mobile\theprince.webp"/>
+        </a>
+        <h2><a href="https://www.kobo.com/ie/en/ebook/the-prince-13" target="_blank">The Prince</a></h2>
+        </div>
+        <div class="work">
+        <a href="https://www.amazon.com/Discourses-Livy-Niccolo-Machiavelli/dp/0226500365" target="_blank">
+        <img alt="Discourses on the First Ten Books of Titus Livius" src="assets\images_mobile\discourses.webp"/>
+        </a>
+        <h2><a href="https://www.amazon.com/Discourses-Livy-Niccolo-Machiavelli/dp/0226500365" target="_blank">Discourses on the First Ten Books of Titus Livius</a></h2>
+        </div>
+        <div class="work">
+        <a href="https://press.uchicago.edu/ucp/books/book/chicago/A/bo3632018.html" target="_blank">
+        <img alt="The Art of War" src="assets\images_mobile\art-of-war.webp"/>
+        </a>
+        <h2><a href="https://press.uchicago.edu/ucp/books/book/chicago/A/bo3632018.html" target="_blank">The Art of War</a></h2>
+        </div>
+        <div class="work">
+        <a href="https://www.amazon.co.uk/Mandrake-Niccolo-Machiavelli/dp/0822207281" target="_blank">
+        <img alt="The Mandrake" src="assets\images_mobile\Mandrake.webp"/>
+        </a>
+        <h2><a href="https://www.amazon.co.uk/Mandrake-Niccolo-Machiavelli/dp/0822207281" target="_blank">The Mandrake</a></h2>
+        </div>
+        <div class="work">
+        <a href="https://www.amazon.com/Clizia-Niccolo-Machiavelli/dp/0881339024" target="_blank">
+        <img alt="The Clizia" src="assets\images_mobile\clizia.webp"/>
+        </a>
+        <h2><a href="https://www.amazon.com/Clizia-Niccolo-Machiavelli/dp/0881339024" target="_blank">The Clizia</a></h2>
+        </div>
+        <div class="work">
+        <a href="https://www.scribd.com/doc/115172438/Machiavelli-Niccolo-The-Golden-Ass-The-chief-works-and-others-Ed-Allan-H-Gilbert-Vol-2-Durham-Duke-University-Press-1965#" target="_blank">
+        <img alt="The Ass" src="assets\images_mobile\ASS-poem.webp"/>
+        </a>
+        <h2><a href="https://www.scribd.com/doc/115172438/Machiavelli-Niccolo-The-Golden-Ass-The-chief-works-and-others-Ed-Allan-H-Gilbert-Vol-2-Durham-Duke-University-Press-1965#" target="_blank">The Ass</a></h2>
+        </div>
+        <div class="work">
+        <a href="https://www.amazon.com/Florentine-Histories-Translated-Niccol%C3%B2-Machiavelli/dp/0691055211" target="_blank">
+        <img alt="The Florentine Histories" src="assets\images_mobile\florentine-histories-amazon.webp"/>
+        </a>
+        <h2><a href="https://www.amazon.com/Florentine-Histories-Translated-Niccol%C3%B2-Machiavelli/dp/0691055211" target="_blank">The Florentine Histories</a></h2>
+        </div>
+        <div class="work">
+        <a href="https://www.amazon.com/Letters-Machiavelli-Selection-Niccolo/dp/0226500411" target="_blank">
+        <img alt="The Letters" src="assets\images_mobile\letters.webp"/>
+        </a>
+        <h2><a href="https://www.amazon.com/Letters-Machiavelli-Selection-Niccolo/dp/0226500411" target="_blank">The Letters</a></h2>
+        </div>
+        </div>
+        </section>
     </main>
   </body>
 </html>
