add biography page hero image and dates of birth and death

--- a/biography.html
+++ b/biography.html
@@ -46,6 +46,27 @@
         </ul>
       </nav>
     </header>
+    <main>
+        <section>
+            <div class="biography-hero-image">
+                <img alt="Niccolò Machiavelli" src="assets\images\images_mobile\VELI-5.webp" />
+                <div class="dates">
+                  <div class="born">
+                    <h2>Born</h2>
+                    <span class="date">May 3, 1469</span>
+                    <span class="location">Florence, Italy</span>
+                  </div>
+                  <span class="separator">-</span>
+                  <div class="died">
+                    <h2>Died</h2>
+                    <span class="date">June 21, 1527</span>
+                    <span class="location">Florence, Italy</span>
+                  </div>
+                </div>
+              </div>
+        </section>
+
+    </main>
   </body>
       <!--Footer-->
       <footer id="site-footer">
