--- a/biography.html
+++ b/biography.html
@@ -47,61 +47,269 @@
       </nav>
     </header>
     <main>
-        <section>
-            <div class="biography-hero-image">
-                <img alt="Niccolò Machiavelli" src="assets\images\images_mobile\VELI-5.webp" />
-                <div class="dates">
-                  <div class="born">
-                    <h2>Born</h2>
-                    <span class="date">May 3, 1469</span>
-                    <span class="location">Florence, Italy</span>
-                  </div>
-                  <span class="separator">-</span>
-                  <div class="died">
-                    <h2>Died</h2>
-                    <span class="date">June 21, 1527</span>
-                    <span class="location">Florence, Italy</span>
-                  </div>
-                </div>
-              </div>
-        </section>
-
+      <section>
+        <div class="biography-hero-image">
+          <img
+            alt="Niccolò Machiavelli"
+            src="assets\images\images_mobile\VELI-5.webp"
+          />
+          <div class="dates">
+            <div class="born">
+              <h2>Born</h2>
+              <span class="date">May 3, 1469</span>
+              <span class="location">Florence, Italy</span>
+            </div>
+            <span class="separator">-</span>
+            <div class="died">
+              <h2>Died</h2>
+              <span class="date">June 21, 1527</span>
+              <span class="location">Florence, Italy</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="biography-section">
+        <h1 class="biography-title">Niccolò Machiavelli</h1>
+        <div class="biography-content">
+          <h2>Early life:</h2>
+          <p>
+            Niccolò Machiavelli was born on May 3, 1469, in Florence, Italy. He
+            was the third child and first son of Bernardo di Niccolò
+            Machiavelli, a lawyer, and his wife, Bartolomea di Stefano Nelli.
+            The Machiavelli family was believed to be descended from the old
+            marquesses of Tuscany, and Niccolò was raised in a middle-class home
+            with access to education.
+          </p>
+          <p>
+            Machiavelli's early education was typical of a young man of his
+            status, and he was taught Latin, rhetoric, and history. He also
+            received instruction in music and poetry. His father's extensive
+            library provided him with access to classical works, which likely
+            influenced his later writings.
+          </p>
+          <p>
+            In his youth, Florence was undergoing significant political changes,
+            and the young Machiavelli was exposed to the complex political
+            landscape of the time. The Medici family, who had ruled Florence,
+            was overthrown in 1494, and this event had a profound impact on
+            Machiavelli's political thinking.
+          </p>
+          <p>
+            Machiavelli's early life was shaped by the political and cultural
+            environment of Renaissance Florence, and his experiences during this
+            time laid the groundwork for his later political theories and
+            writings.
+          </p>
+          <p></p>
+          <h2>Political Career:</h2>
+          <p>
+            Machiavelli's political career began in 1498 when he was appointed
+            as the head of the second chancery, a position responsible for the
+            production of official Florentine government documents. He also
+            served as the Secretary to the "Dieci di Libertà e Pace," a
+            committee dealing with the Republic's foreign affairs and defence.
+          </p>
+          <h2>Diplomatic Missions:</h2>
+          <p></p>
+          <p>1. Mission to Caterina Sforza (1499)</p>
+          <p>
+            Machiavelli was sent to Forlì to negotiate with Caterina Sforza, the
+            Countess of Forlì. This mission provided him with insights into the
+            nature of political power and the use of ruthlessness in politics.
+          </p>
+          <p>2. Mission to France (1500-1502)</p>
+          <p>
+            Machiavelli was dispatched to the court of King Louis XII of France
+            on several occasions. These missions were aimed at securing French
+            support for Florence and negotiating various political alliances.
+            His observations of the French court influenced his thoughts on
+            statecraft and governance.
+          </p>
+          <p>3. Mission to Cesare Borgia (1502-1503)</p>
+          <p>
+            One of Machiavelli's most famous missions was to the court of Cesare
+            Borgia, the Duke of Valentinois. Machiavelli spent several months
+            observing Borgia's tactics in consolidating power and expanding his
+            territories. Borgia's ruthlessness and cunning left a lasting
+            impression on Machiavelli and greatly influenced his later writings,
+            particularly "The Prince."
+          </p>
+          <p>4. Mission to the Holy Roman Empire (1507-1508)</p>
+          <p>
+            Machiavelli was sent to the court of Emperor Maximilian I to
+            negotiate Florence's position in the shifting alliances of Italian
+            and European powers. His experiences during this mission further
+            shaped his understanding of international diplomacy and realpolitik.
+          </p>
+          <p>5. Other Missions</p>
+          <p>
+            Throughout his career, Machiavelli undertook various other missions
+            to different Italian city-states, including Venice, Mantua, and
+            Rome. These missions often involved complex negotiations,
+            alliance-building, and intelligence gathering.
+          </p>
+          <p>Impact and Legacy</p>
+          <p>
+            Machiavelli's diplomatic missions provided him with a unique vantage
+            point to observe the political machinations of his time. He
+            witnessed the interplay of power, ambition, deceit, and pragmatism
+            that characterized Renaissance politics. These experiences deeply
+            informed his political philosophy and contributed to his unvarnished
+            portrayal of political reality in his writings.
+          </p>
+          <p>
+            Machiavelli's diplomatic career was not without controversy, and his
+            methods and views were often met with criticism and suspicion.
+            However, his keen observations and willingness to engage with the
+            complexities of power continue to resonate in political thought and
+            practice.
+          </p>
+          <h1>Fall from Power:</h1>
+          <p></p>
+          <h2>Return of the Medici Family (1512)</h2>
+          <p>
+            Machiavelli's fall from power was precipitated by the return of the
+            Medici family to Florence in 1512. The Medici, who had been expelled
+            from Florence in 1494, regained control with the help of Spanish
+            troops. Their return marked the end of the Republic and the
+            beginning of a new era of Medici rule.
+          </p>
+          <h2>Accusation of Conspiracy</h2>
+          <p>
+            In 1513, Machiavelli was implicated in a conspiracy known as the
+            "Boscoli Conspiracy," aimed at overthrowing the Medici. Although
+            there was little evidence to directly link Machiavelli to the plot,
+            his association with some of the conspirators led to his arrest.
+          </p>
+          <h2>Imprisonment and Torture</h2>
+          <p>
+            Machiavelli was imprisoned and subjected to torture, including the
+            "strappado," a method that involved hoisting the victim by a rope
+            tied to his wrists behind his back. Despite the brutal treatment,
+            Machiavelli did not confess to any involvement in the conspiracy.
+          </p>
+          <h2>Release and Exile</h2>
+          <p>
+            After a few weeks in prison, Machiavelli was released, likely due to
+            a lack of evidence. However, he was removed from his government
+            position and banished from Florence's political life. He was
+            confined to his family's estate in Sant'Andrea in Percussina, near
+            Florence.
+          </p>
+          <h2>Impact and Reflection</h2>
+          <p>
+            Machiavelli's fall from power marked a profound shift in his life.
+            Stripped of his political role, he turned to writing as a means of
+            engaging with the political ideas that had shaped his career. It was
+            during this period of exile that he wrote some of his most famous
+            works, including "The Prince" and "Discourses on Livy."
+          </p>
+          <p>
+            Machiavelli's reflections on power, leadership, and human nature
+            were undoubtedly shaped by his personal experiences of political
+            intrigue, betrayal, and downfall. His writings, though
+            controversial, continue to be a source of fascination and debate,
+            offering timeless insights into the complexities of politics and
+            governance.
+          </p>
+          <p>
+            The fall from power was a painful yet transformative period for
+            Machiavelli, leading him from the corridors of power to the solitude
+            of his study, where he crafted some of the most enduring works in
+            political philosophy.
+          </p>
+          <p></p>
+          <p></p>
+          <h1>Last Years</h1>
+          <p></p>
+          <h2>Literary Works</h2>
+          <p>
+            After his fall from power, Machiavelli continued to write
+            extensively. In addition to "The Prince," he authored "Discourses on
+            Livy," a commentary on the Roman historian Livy, and "The Art of
+            War," a treatise on military strategy. He also wrote plays, such as
+            "The Mandrake," which became popular in Florence.
+          </p>
+          <p></p>
+          <h2>Return to Public Life</h2>
+          <p>
+            In 1520, Machiavelli was commissioned by the Medici to write a
+            history of Florence. This work, known as "The Florentine Histories,"
+            allowed him a degree of reentry into public life. He also served in
+            various minor government roles, though he never regained his former
+            influence.
+          </p>
+          <h2>Personal Life</h2>
+          <p>
+            Machiavelli's personal life during these years was characterized by
+            a mix of intellectual engagement and rural simplicity. He
+            corresponded with scholars and maintained connections with
+            Florentine intellectuals. At the same time, he enjoyed the rustic
+            life on his family estate, tending to his farm and vineyards.
+          </p>
+          <h2>Health and Death</h2>
+          <p>
+            Machiavelli's health began to decline in the later years of his
+            life. He suffered from various ailments, possibly including stomach
+            ulcers. He died on June 21, 1527, just a few weeks after the fall of
+            the Medici dynasty and the restoration of the Republic. Ironically,
+            he did not live to see the political changes that might have allowed
+            him a more significant return to public life.
+          </p>
+          <h1>Legacy</h1>
+          <p>
+            Machiavelli's last years were a time of reflection, creativity, and
+            resilience. Despite his political downfall, he continued to engage
+            with the political and philosophical questions that had defined his
+            career. His writings from this period remain foundational texts in
+            political theory and continue to be studied and debated by scholars,
+            politicians, and thinkers.
+          </p>
+          <p>
+            Machiavelli's complex legacy as a thinker and writer transcends his
+            historical context, and his insights into power, leadership, and
+            human nature continue to resonate in contemporary political
+            discourse.
+          </p>
+          <p></p>
+        </div>
+      </section>
     </main>
   </body>
-      <!--Footer-->
-      <footer id="site-footer">
-        <ul id="footer-nav">
-          <li>
-            <a class="footer-link" href="index.html"
-              ><i class="fa-solid fa-house"></i
-            ></a>
-            <a
-              class="footer-link"
-              href="https://www.facebook.com/"
-              rel="noopener"
-              target="_blank"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-            <a
-              class="footer-link"
-              href="https://twitter.com/home"
-              rel="noopener"
-              target="_blank"
-              ><i class="fa-brands fa-twitter"></i
-            ></a>
-            <a
-              class="footer-link"
-              href="https://youtu.be/IdRxHTih-28"
-              rel="noopener"
-              target="_blank"
-              ><i class="fa-brands fa-youtube"></i
-            ></a>
-          </li>
-        </ul>
-      </footer>
-      <!--Font Awesome Kit-->
-      <script
-        crossorigin="anonymous"
-        src="https://kit.fontawesome.com/752275c1b1.js"
-      ></script>
+  <!--Footer-->
+  <footer id="site-footer">
+    <ul id="footer-nav">
+      <li>
+        <a class="footer-link" href="index.html"
+          ><i class="fa-solid fa-house"></i
+        ></a>
+        <a
+          class="footer-link"
+          href="https://www.facebook.com/"
+          rel="noopener"
+          target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          class="footer-link"
+          href="https://twitter.com/home"
+          rel="noopener"
+          target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a
+          class="footer-link"
+          href="https://youtu.be/IdRxHTih-28"
+          rel="noopener"
+          target="_blank"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+      </li>
+    </ul>
+  </footer>
+  <!--Font Awesome Kit-->
+  <script
+    crossorigin="anonymous"
+    src="https://kit.fontawesome.com/752275c1b1.js"
+  ></script>
 </html>
