style biography essay section

--- a/biography.html
+++ b/biography.html
@@ -71,7 +71,7 @@
       <section class="biography-section">
         <h1 class="biography-title">Niccolò Machiavelli</h1>
         <div class="biography-content">
-          <h2>Early life:</h2>
+          <h1>Early life:</h1>
           <p>
             Niccolò Machiavelli was born on May 3, 1469, in Florence, Italy. He
             was the third child and first son of Bernardo di Niccolò
@@ -220,7 +220,7 @@
           </p>
           <p></p>
           <p></p>
-          <h1>Last Years</h1>
+          <h1>Last Years:</h1>
           <p></p>
           <h2>Literary Works</h2>
           <p>
@@ -277,7 +277,7 @@
     </main>
   </body>
   <!--Footer-->
-  <footer id="site-footer">
+  <footer id="site-footer-bio">
     <ul id="footer-nav">
       <li>
         <a class="footer-link" href="index.html"
