add invitation to machiavellian summit text

--- a/signup.html
+++ b/signup.html
@@ -45,8 +45,20 @@
           <li><a class="active" href="signup.html">Signup</a></li>
         </ul>
       </nav>
-    </header>    
-</body>
+    </header>
+    <main>
+      <section class="invitation-text">
+        <p>
+          We look forward to welcoming you to the Machiavellian Summit at
+          <strong>The Academy, 42 Pearse St, Dublin, D02 HV59</strong>. Don't
+          miss this unique opportunity to explore the legacy of Niccolò
+          Machiavelli!
+        </p>
+        <h2>Date:</h2>
+        <p><strong>25th - 26th November, 2023</strong></p>
+      </section>
+    </main>
+  </body>
   <!--Footer-->
   <footer id="site-footer-signup">
     <ul id="footer-nav">
