--- a/signup.html
+++ b/signup.html
@@ -48,14 +48,16 @@
     </header>
     <main>
       <section class="invitation-text">
-        <p>
-          We look forward to welcoming you to the Machiavellian Summit at
-          <strong>The Academy, 42 Pearse St, Dublin, D02 HV59</strong>. Don't
-          miss this unique opportunity to explore the legacy of Niccolò
-          Machiavelli!
-        </p>
-        <h2>Date:</h2>
-        <p><strong>25th - 26th November, 2023</strong></p>
+        <div class="invitation-text-container">
+          <p>
+            We look forward to welcoming you to the Machiavellian Summit at
+            <strong>The Academy, 42 Pearse St, Dublin, D02 HV59</strong>. Don't
+            miss this unique opportunity to explore the legacy of Niccolò
+            Machiavelli!
+          </p>
+          <h2>Date:</h2>
+          <p><strong>25th - 26th November, 2023</strong></p>
+        </div>
       </section>
     </main>
   </body>
