--- a/signup.html
+++ b/signup.html
@@ -59,6 +59,40 @@
           <p><strong>25th - 26th November, 2023</strong></p>
         </div>
       </section>
+      <section class="signup-container">
+        <h1>Join Us</h1>
+        <p>
+          Join us at the Machiavellian Summit to discuss the life and works of
+          Niccolò Machiavelli.
+        </p>
+        <form action="/submit" class="signup-form" method="post">
+          <label for="name">Name:</label>
+          <input
+            id="name"
+            name="name"
+            placeholder="(Name)"
+            required=""
+            type="text"
+          />
+          <label for="surname">Surname:</label>
+          <input
+            id="surname"
+            name="surname"
+            placeholder="(Surname)"
+            required=""
+            type="text"
+          />
+          <label for="email">Email Address:</label>
+          <input
+            id="email"
+            name="email"
+            placeholder="(Email Address)"
+            required=""
+            type="email"
+          />
+          <button type="submit">Sign Up</button>
+        </form>
+      </section>
     </main>
   </body>
   <!--Footer-->
