make adjustments to quote positions on homepage and add tablet media query

--- a/signup.html
+++ b/signup.html
@@ -93,6 +93,16 @@
           <button type="submit">Sign Up</button>
         </form>
       </section>
+      <section class="map-container">
+        <iframe
+          allowfullscreen=""
+          height="450"
+          loading="lazy"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.796329779573!2d-6.253559484152271!3d53.34464007997921!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e85422f2a2f%3A0x5a8be0c5f75dfc14!2sThe%20Academy%2C%2042%20Pearse%20St%2C%20Dublin%2C%20D02%20HV59!5e0!3m2!1sen!2sie!4v1631094032305!5m2!1sen!2sie"
+          style="border: 0"
+          width="600"
+        ></iframe>
+      </section>
     </main>
   </body>
   <!--Footer-->
