--- a/index.html
+++ b/index.html
@@ -53,39 +53,25 @@
     <!-- Main -->
     <main>
       <section>
-        <div class="background-img"></div>
-        <a class="explore-more" href="index.html#video-section">Explore More</a>
         <div class="heading-container">
           <h1 id="heading">NICCOLO MACHIAVELLI</h1>
         </div>
         <!-- Quotes -->
-        <div class="quote-container">
-          <div class="quote-group">
-            <div class="quote" id="quote1">
-              <p>
-                "I'm not interested in preserving the status quo;<br />
-                I want to overthrow it"
-              </p>
-            </div>
-            <div class="quote" id="quote2">
-              <p>
-                "Where the willingness is great,<br />
-                the difficulties cannot be great."
-              </p>
-            </div>
-          </div>
-          <div class="quote-group">
-            <div class="quote" id="quote3">
-              <p>
-                "The first method for <br />
-                estimating the intelligence of a <br />ruler is to look at the
-                men he has around him."
-              </p>
-            </div>
-            <div class="quote" id="quote4">
-              <p>"Never was anything great achieved <br />without danger."</p>
-            </div>
-          </div>
+        <div class="quote" id="quote1">
+          <p>
+            "I'm not interested in preserving the status quo;<br />
+            I want to overthrow it"
+          </p>
+        </div>
+        <div
+          class="background-img"
+        ></div>
+        <a class="explore-more" href="index.html#video-section">Explore More</a>
+        <div class="quote" id="quote2">
+          <p>
+            "Where the willingness is great,<br />
+            the difficulties cannot be great."
+          </p>
         </div>
       </section>
       <section id="video-section">
@@ -99,6 +85,13 @@
             title="The Prince by Niccolò Machiavelli (Complete Audiobook, Unabridged)"
             width="1271"
           ></iframe>
+        </div>
+        <div class="quote" id="quote3">
+          <p>
+            "The first method for <br />
+            estimating the intelligence of a <br />ruler is to look at the
+            men he has around him."
+          </p>
         </div>
       </section>
       <!-- Literary Works -->
@@ -250,6 +243,10 @@
             </h2>
           </div>
         </div>
+        <div class="quote" id="quote4">
+          <p>"Never was anything great achieved <br />without danger."</p>
+        </div>
+      </div>
       </section>
     </main>
     <!--Footer-->
