fix positioning on index.html

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         <div
           class="background-img"
         ></div>
-        <a class="explore-more" href="index.html#video-section">Explore More</a>
+        <a class="explore-more" href="index.html#quote2">Explore More</a>
+      </section>
+      <section id="video-section">
         <div class="quote" id="quote2">
           <p>
             "Where the willingness is great,<br />
             the difficulties cannot be great."
           </p>
         </div>
-      </section>
-      <section id="video-section">
         <div class="video-container">
           <iframe
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
