correct general practice mistakes made in index.html

--- a/biography.html
+++ b/biography.html
@@ -8,14 +8,9 @@
     <link href="assets\css\style.css" rel="stylesheet" />
     <meta content="Welcome to the Machiavellian Summit." name="description" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link
-      href="/mnt/data/book-journal-whills-solid.svg"
-      rel="icon"
-      type="image/svg+xml"
-    />
     <!--Favicons-->
     <link
-      href="assets\favicon\book-journal-whills-solid.svg"
+      href="assets\images\images_desktop\logo.svg"
       rel="icon"
       type="image/svg+xml"
     />
@@ -47,7 +42,6 @@
       </nav>
     </header>
     <main>
-      <section>
         <div class="biography-hero-image">
           <img
             alt="Niccolò Machiavelli"
@@ -66,7 +60,7 @@
               <span class="date">June 21, 1527</span>
               <span class="location">Florence, Italy</span>
             </div>
-      </section>
+    </section>
       <section class="biography-section">
         <h1 class="biography-title">Niccolò Machiavelli</h1>
         <div class="biography-content">
