--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Niccolò Machiavelli</title>
-    <link href="assets\css\style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <meta content="Welcome to the Machiavellian Summit." name="description" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link
-      href="/mnt/data/book-journal-whills-solid.svg"
-      rel="icon"
-      type="image/svg+xml"
-    />
     <!--Favicons-->
     <link
-      href="assets\favicon\book-journal-whills-solid.svg"
+      href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
     />
@@ -63,9 +58,7 @@
             I want to overthrow it"
           </p>
         </div>
-        <div
-          class="background-img"
-        ></div>
+        <div class="background-img"></div>
         <a class="explore-more" href="index.html#quote2">Explore More</a>
       </section>
       <section id="video-section">
@@ -75,6 +68,7 @@
             the difficulties cannot be great."
           </p>
         </div>
+        <div>
           <iframe
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen=""
@@ -84,11 +78,12 @@
             title="The Prince by Niccolò Machiavelli (Complete Audiobook, Unabridged)"
             width="1271"
           ></iframe>
+        </div>
         <div class="quote" id="quote3">
           <p>
             "The first method for <br />
-            estimating the intelligence of a <br />ruler is to look at the
-            men he has around him."
+            estimating the intelligence of a <br />ruler is to look at the men
+            he has around him."
           </p>
         </div>
       </section>
@@ -103,7 +98,7 @@
             >
               <img
                 alt="The Prince"
-                src="assets\images\images_mobile\theprince.webp"
+                src="assets/images/images_mobile/theprince.webp"
               />
             </a>
             <h2>
@@ -157,7 +152,7 @@
             >
               <img
                 alt="The Mandrake"
-                src="assets\images\images_mobile\Mandrake.webp"
+                src="assets/images/images_mobile/Mandrake.webp"
               />
             </a>
             <h2>
@@ -193,7 +188,7 @@
             >
               <img
                 alt="The Ass"
-                src="assets\images\images_mobile\ASS-poem.webp"
+                src="assets/images/images_mobile/ASS-poem.webp"
               />
             </a>
             <h2>
@@ -211,7 +206,7 @@
             >
               <img
                 alt="The Florentine Histories"
-                src="assets\images\images_mobile\florentine-histories-amazon.webp"
+                src="assets/images/images_mobile/florentine-histories-amazon.webp"
               />
             </a>
             <h2>
@@ -229,7 +224,7 @@
             >
               <img
                 alt="The Letters"
-                src="assets\images\images_mobile\letters.webp"
+                src="assets/images/images_mobile/letters.webp"
               />
             </a>
             <h2>
@@ -244,7 +239,6 @@
         <div class="quote" id="quote4">
           <p>"Never was anything great achieved <br />without danger."</p>
         </div>
-      </div>
       </section>
     </main>
     <!--Footer-->
