--- a/signup.html
+++ b/signup.html
@@ -8,14 +8,9 @@
     <link href="assets\css\style.css" rel="stylesheet" />
     <meta content="Welcome to the Machiavellian Summit." name="description" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link
-      href="/mnt/data/book-journal-whills-solid.svg"
-      rel="icon"
-      type="image/svg+xml"
-    />
     <!--Favicons-->
     <link
-      href="assets\favicon\book-journal-whills-solid.svg"
+      href="assets\images\images_desktop\logo.svg"
       rel="icon"
       type="image/svg+xml"
     />
