correct general practice mistakes on other pages

--- a/biography.html
+++ b/biography.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Niccolò Machiavelli</title>
-    <link href="assets\css\style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <meta content="Welcome to the Machiavellian Summit." name="description" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!--Favicons-->
     <link
-      href="assets\images\images_desktop\logo.svg"
+      href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
     />
@@ -42,25 +42,27 @@
       </nav>
     </header>
     <main>
+      <section>
         <div class="biography-hero-image">
           <img
             alt="Niccolò Machiavelli"
-            src="assets\images\images_mobile\VELI-5.webp"
+            src="assets/images/images_mobile/VELI-5.webp"
           />
         </div>
         <div class="dates">
-            <div class="born">
-              <h2>Born</h2>
-              <span class="date">May 3, 1469</span>
-              <span class="location">Florence, Italy</span>
-            </div>
-            <span class="separator">-</span>
-            <div class="died">
-              <h2>Died</h2>
-              <span class="date">June 21, 1527</span>
-              <span class="location">Florence, Italy</span>
-            </div>
-    </section>
+          <div class="born">
+            <h2>Born</h2>
+            <span class="date">May 3, 1469</span>
+            <span class="location">Florence, Italy</span>
+          </div>
+          <span class="separator">-</span>
+          <div class="died">
+            <h2>Died</h2>
+            <span class="date">June 21, 1527</span>
+            <span class="location">Florence, Italy</span>
+          </div>
+        </div>
+      </section>
       <section class="biography-section">
         <h1 class="biography-title">Niccolò Machiavelli</h1>
         <div class="biography-content">
