--- a/signup.html
+++ b/signup.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Niccolò Machiavelli</title>
-    <link href="assets\css\style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <meta content="Welcome to the Machiavellian Summit." name="description" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!--Favicons-->
     <link
-      href="assets\images\images_desktop\logo.svg"
+      href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
     />
