fix accessibility issues

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
+      name="favicon"
     />
   </head>
 
@@ -246,13 +247,14 @@
       <ul id="footer-nav">
         <li>
           <a class="footer-link" href="index.html"
-            ><i class="fa-solid fa-house"></i
+            name="home"><i class="fa-solid fa-house"></i
           ></a>
           <a
             class="footer-link"
             href="https://www.facebook.com/"
             rel="noopener"
             target="_blank"
+            name="facebook"
             ><i class="fa-brands fa-facebook"></i
           ></a>
           <a
@@ -260,6 +262,7 @@
             href="https://twitter.com/home"
             rel="noopener"
             target="_blank"
+            name="twitter"
             ><i class="fa-brands fa-twitter"></i
           ></a>
           <a
@@ -267,6 +270,7 @@
             href="https://youtu.be/IdRxHTih-28"
             rel="noopener"
             target="_blank"
+            name="youtube"
             ><i class="fa-brands fa-youtube"></i
           ></a>
         </li>
