fix bug with footer on bio page not staying in right position

--- a/biography.html
+++ b/biography.html
@@ -274,7 +274,7 @@
     </main>
   </body>
     <!--Footer-->
-    <footer id="site-footer">
+    <footer id="site-footer-bio">
         <ul id="footer-nav">
           <li>
             <a class="footer-link" href="index.html"
