--- a/signup.html
+++ b/signup.html
@@ -103,7 +103,7 @@
     </main>
   </body>
     <!--Footer-->
-    <footer id="site-footer">
+    <footer id="site-footer-signup">
         <ul id="footer-nav">
           <li>
             <a class="footer-link" href="index.html"
