fix issue with form submission not working

--- a/signup.html
+++ b/signup.html
@@ -62,7 +62,7 @@
           Join us at the Machiavellian Summit to discuss the life and works of
           Niccolò Machiavelli.
         </p>
-        <form action="/submit" class="signup-form" method="post">
+        <form action="https://formdump.codeinstitute.net" class="signup-form" method="post">
           <label for="name">Name:</label>
           <input
             id="name"
