--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <!-- Main -->
     <main>
-      <section>
+      <section style="height: 50vh;">
         <div class="heading-container">
           <h1 id="heading">NICCOLO MACHIAVELLI</h1>
         </div>
@@ -69,16 +69,19 @@
             the difficulties cannot be great."
           </p>
         </div>
-        <div>
+        <div class="video">
           <iframe
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen=""
-            frameborder="0"
-            height="715"
-            src="https://www.youtube.com/embed/IdRxHTih-28"
-            title="The Prince by Niccolò Machiavelli (Complete Audiobook, Unabridged)"
-            width="1271"
-          ></iframe>
+          loading="lazy" 
+          frameborder="0"
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/IdRxHTih-28?rel=0&modestbranding=1"
+          title="The Prince by Niccolò Machiavelli (Complete Audiobook, Unabridged)"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          style="display: block; margin: auto;" 
+        ></iframe>
+        <link rel="preconnect" href="https://www.youtube.com"> <!-- Preconnect to YouTube's domain -->
+        <link rel="preconnect" href="https://www.gstatic.com"> <!-- Preconnect to related domain -->             
         </div>
         <div class="quote" id="quote3">
           <p>
@@ -98,6 +101,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="The Prince"
                 src="assets/images/images_mobile/theprince.webp"
               />
@@ -116,6 +120,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="Discourses on the First Ten Books of Titus Livius"
                 src="assets/images/images_mobile/discourses.webp"
               />
@@ -134,6 +139,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="The Art of War"
                 src="assets/images/images_mobile/art-of-war.webp"
               />
@@ -152,6 +158,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="The Mandrake"
                 src="assets/images/images_mobile/Mandrake.webp"
               />
@@ -170,6 +177,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="The Clizia"
                 src="assets/images/images_mobile/clizia.webp"
               />
@@ -188,6 +196,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="The Ass"
                 src="assets/images/images_mobile/ASS-poem.webp"
               />
@@ -206,6 +215,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="The Florentine Histories"
                 src="assets/images/images_mobile/florentine.webp"
               />
@@ -224,6 +234,7 @@
               target="_blank"
             >
               <img
+                loading="lazy"
                 alt="The Letters"
                 src="assets/images/images_mobile/letters.webp"
               />
@@ -246,8 +257,8 @@
     <footer id="site-footer">
       <ul id="footer-nav">
         <li>
-          <a class="footer-link" href="index.html"
-            name="home"><i class="fa-solid fa-house"></i
+          <a class="footer-link" href="index.html" name="home"
+            ><i class="fa-solid fa-house"></i
           ></a>
           <a
             class="footer-link"
