fix additional validation issues

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <!-- Main -->
     <main>
-      <section style="height: 50vh;">
+      <section style="height: 50vh">
         <div class="heading-container">
           <h1 id="heading">NICCOLO MACHIAVELLI</h1>
         </div>
@@ -70,17 +70,18 @@
         </div>
         <div class="video">
           <iframe
-          loading="lazy" 
-          frameborder="0"
-          height="400"
-          width="400"
-          src="https://www.youtube.com/embed/IdRxHTih-28?rel=0&modestbranding=1"
-          title="The Prince by Niccolò Machiavelli (Complete Audiobook, Unabridged)"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          style="display: block; margin: auto;" 
-        ></iframe>
-        <link rel="preconnect" href="https://www.youtube.com"> <!-- Preconnect to YouTube's domain -->
-        <link rel="preconnect" href="https://www.gstatic.com"> <!-- Preconnect to related domain -->             
+            loading="lazy"
+            height="400"
+            width="400"
+            src="https://www.youtube.com/embed/IdRxHTih-28?rel=0&modestbranding=1"
+            title="The Prince by Niccolò Machiavelli (Complete Audiobook, Unabridged)"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            style="display: block; margin: auto"
+          ></iframe>
+          <link rel="preconnect" href="https://www.youtube.com" />
+          <!-- Preconnect to YouTube's domain -->
+          <link rel="preconnect" href="https://www.gstatic.com" />
+          <!-- Preconnect to related domain -->
         </div>
         <div class="quote" id="quote3">
           <p>
@@ -256,7 +257,7 @@
     <footer id="site-footer">
       <ul id="footer-nav">
         <li>
-          <a class="footer-link" href="index.html" name="home"
+          <a class="footer-link" href="index.html"
             ><i class="fa-solid fa-house"></i
           ></a>
           <a
@@ -264,7 +265,6 @@
             href="https://www.facebook.com/"
             rel="noopener"
             target="_blank"
-            name="facebook"
             ><i class="fa-brands fa-facebook"></i
           ></a>
           <a
@@ -272,7 +272,6 @@
             href="https://twitter.com/home"
             rel="noopener"
             target="_blank"
-            name="twitter"
             ><i class="fa-brands fa-twitter"></i
           ></a>
           <a
@@ -280,7 +279,6 @@
             href="https://youtu.be/IdRxHTih-28"
             rel="noopener"
             target="_blank"
-            name="youtube"
             ><i class="fa-brands fa-youtube"></i
           ></a>
         </li>
