--- a/biography.html
+++ b/biography.html
@@ -14,7 +14,6 @@
       href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
-      name="favicon"
     />
   </head>
   <body>
@@ -273,40 +272,37 @@
       </section>
     </main>
   </body>
-    <!--Footer-->
-    <footer id="site-footer-bio">
-        <ul id="footer-nav">
-          <li>
-            <a class="footer-link" href="index.html"
-              name="home"><i class="fa-solid fa-house"></i
-            ></a>
-            <a
-              class="footer-link"
-              href="https://www.facebook.com/"
-              rel="noopener"
-              target="_blank"
-              name="facebook"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-            <a
-              class="footer-link"
-              href="https://twitter.com/home"
-              rel="noopener"
-              target="_blank"
-              name="twitter"
-              ><i class="fa-brands fa-twitter"></i
-            ></a>
-            <a
-              class="footer-link"
-              href="https://youtu.be/IdRxHTih-28"
-              rel="noopener"
-              target="_blank"
-              name="youtube"
-              ><i class="fa-brands fa-youtube"></i
-            ></a>
-          </li>
-        </ul>
-      </footer>
+  <!--Footer-->
+  <footer id="site-footer-bio">
+    <ul id="footer-nav">
+      <li>
+        <a class="footer-link" href="index.html"
+          ><i class="fa-solid fa-house"></i
+        ></a>
+        <a
+          class="footer-link"
+          href="https://www.facebook.com/"
+          rel="noopener"
+          target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          class="footer-link"
+          href="https://twitter.com/home"
+          rel="noopener"
+          target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a
+          class="footer-link"
+          href="https://youtu.be/IdRxHTih-28"
+          rel="noopener"
+          target="_blank"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+      </li>
+    </ul>
+  </footer>
   <!--Font Awesome Kit-->
   <script
     crossorigin="anonymous"
